# universal-trading-strategy-schema

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md  mcp.json
.github/workflows/: ci.yml  docs.yml
api/: index.html
api-pyutss/: index.html
architecture/: index.html
changelog/: index.html
comparison/: index.html
contributing/: index.html
docs/: UTSS-v2.1-SPEC.md  api-pyutss.md  api.md  architecture.md  changelog.md  comparison.md  contributing.md  examples.md  formula-reference.md  index.md  installation.md  llm-guide.md  mcp-guide.md  quickstart.md  research.md  signals.md  specification.md
docs/examples/: earnings-play.yaml  golden-cross.yaml  monday-friday.yaml  rsi-reversal.yaml
docs/schema/v1/: backtest.json  strategy.json
examples/: alerts.yaml  earnings-play.yaml  golden-cross.yaml  index.html  jp-equity.yaml  monday-friday.yaml  parameterized.yaml  portfolio-rebalance.yaml  quickstart.ipynb  relative-strength.yaml  rsi-reversal.yaml  short-selling.yaml
examples/backtest-configs/: backtest-config.yaml  jp-backtest-config.yaml
formula-reference/: index.html
installation/: index.html
llm-guide/: index.html
mcp-guide/: index.html
patterns/: README.md  chart_patterns.yaml  crossovers.yaml  momentum.yaml  price_action.yaml  ranges.yaml  temporal.yaml
python/: README.md  pyproject.toml
python/utss/: __init__.py  models.py
quickstart/: index.html
research/: index.html
schema/v1/: backtest.schema.json  strategy.schema.json
schema/v2/: strategy.schema.json
search/: search_index.json
specification/: index.html
tests/integration/: test_examples.py  test_real_data.py  test_schema_coverage.py
typescript/: package.json
typescript/src/: index.ts  validator.ts
