[project]
name = "utss"
version = "2.0.0"
description = "Universal Trading Strategy Schema - Python types and validation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "obichan117" }]
requires-python = ">=3.10"
keywords = [
    "trading",
    "strategy",
    "schema",
    "backtesting",
    "quantitative-finance",
    "algorithmic-trading",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/obichan117/universal-trading-strategy-schema"
Documentation = "https://github.com/obichan117/universal-trading-strategy-schema#readme"
Repository = "https://github.com/obichan117/universal-trading-strategy-schema"
Issues = "https://github.com/obichan117/universal-trading-strategy-schema/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utss"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=utss --cov-report=term-missing"
